--- a/css/core__features.css
+++ b/css/core__features.css
@@ -18,7 +18,7 @@
 .features__box-line {
     color: var(--color-elements);
     display: flex;
-    padding: 0px 5px 0px 15px;
+    padding: 0px 15px 0px 15px;
     justify-content: left;
     align-items: start;
     display: inline-block;
@@ -36,7 +36,6 @@
     text-align: left;
     text-transform: none;
     color: var(--color-title);
-    margin: 0px 0px 0px 10px;
     display: block;
     display: inline-block;
 }
@@ -63,9 +62,7 @@
     font-weight: 400;
     text-align: left;
     text-transform: none;
-    line-height: 27.2px;
-    /*cursor: pointer;*/
-    
+    line-height: 27.2px; 
 }
 .features__question-link {
     text-decoration: none;
@@ -77,7 +74,6 @@
     text-align: left;
     text-transform: none;
     line-height: 24px;
-    /*cursor: pointer;*/
 }
 
 .demo__application {
@@ -85,7 +81,6 @@
 }
 
 .features__carousel {
-    
     margin: 20px 0px 100px 0px;
 }
 
@@ -94,7 +89,6 @@
     height: 295px;
     padding: 10px 15px 5px 10px;
     margin: auto;
-
 }
 
 .features__carousel-gradient {
@@ -121,7 +115,6 @@
     text-transform: none;
     line-height: 23.4px;
     padding: 20px 20px 0px 20px;
-    /*margin: 0px 20px 0px 20px;*/
 }
 .features__carousel-benefit {
     color: var(--color-subtitle);
@@ -134,8 +127,6 @@
     line-height: 27.2px;
     height: 200px;
     margin: 20px 20px 10px 20px;
-    /*padding: 20px 20px 10px 20px;*/
-    /*max-width: 100%;*/
 }
 
 .demo__application {
@@ -149,7 +140,7 @@
 }
 .application__box-line {
     color: var(--color-elements);
-    display: flex;
+    /*display: flex;*/
     justify-content: left;
     align-items: start;
 }
@@ -165,6 +156,7 @@
     font-style: normal;
     font-family: "Ubuntu", sans-serif;
     color: var(--color-title);
+    padding-left: 15px;
 }
 
 .advantage__block {
@@ -173,12 +165,14 @@
 }
 
 .advantage__icon-box {
-    width: 50px;
+    display: block;
     height: 50px;
-    background: #1a1c28;
+    width: 50px;
+    background: rgb(180, 180, 180, 0.07);
     display: flex;
     border-radius: 50%;
-    text-align: center;
+    /*align-items: center;*/
+    justify-content: center;
 }
 
 .advantage__icon {
@@ -191,7 +185,8 @@
 .advantage__block-text {
     display: flex;
     flex-direction: column;
-    margin: 7.5px;
+    padding: 7.5px;
+    width: 240px;
 }
 
 .advantage__title {
@@ -268,35 +263,6 @@
     border-style: solid;
     border-radius: 10px;
   }
-
-/*.application__background {
-    width: 100%;
-    display: flex;
-    *background-image: url(img/background_phone.webp);
-    margin: 20px 0px 0px 0px;
-    *background-attachment: fixed;
-}*/
-
-/*.application__phone-block {
-    /*width: 100px;*g
-    /*position: absolute;*
-       /*top: 50px;
-    left: 50px;
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-    *z-index: 1;
-}
-.application__phone {
-    /*width: 100px;*/
-    /*position: absolute;*/
-    /*top: 50px;
-    left: 50px;
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-}*/
 
 .banner__wraper {
     /*width: 100%;*/
