--- a/css/ico__progress.css
+++ b/css/ico__progress.css
@@ -113,23 +113,23 @@
     background: linear-gradient(rgb(127 132 221), rgb(186, 88, 208));
 }
 
-/*@media (min-width: 768px) {
-.ico-progress__row {
-    flex-direction: row;
-}
+@media (min-width: 768px) {
+    .ico-progress__row {
+        flex-direction: row;
+    }
 
-.section-title__title {
-    font-size: 40px;
-}
+    .section-title__title {
+        font-size: 40px;
+    }
 
-.row__title {
-    font-size: 20px;
-}
+    .row__title {
+        font-size: 20px;
+    }
 
-.row__value {
-    font-size: 24px;
-}
-.ico-progress__button {
-    font-size: 22.5px;
-}
+    .row__value {
+        font-size: 24px;
+    }
+    .ico-progress__button {
+        font-size: 22.5px;
+    }
 }
