--- a/css/experienced-team-job.css
+++ b/css/experienced-team-job.css
@@ -136,39 +136,41 @@
 .press__media_carousel-container {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    /* justify-content: center; */
     position: relative;
-    padding: 0 15px 0 15px;
-    align-items: center;
     cursor: pointer;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
     /* place-items: center; */
 }
 
 .press__media_carousel_slider {
     display: flex;
     flex-direction: row;
+    gap: 10px;
     /* white-space: nowrap; */
-    overflow: hidden;
-    scroll-behavior: smooth;
+     overflow: hidden;
+    /*scroll-behavior: smooth;
     justify-content: center;
-    /* align-items: center; */
+    align-items: center; */
 }
 
 .press__media_carousel_slide {
-    display: inline-block;
+    display: flex;
+    flex-direction: row;
     background-color: #364667;
-    padding: 30px;
+    padding: 20px;
+
 }
 
-/* .press__media_slide_content {
-    margin: 20px;
-} */
+.press__media_slide_content {
+    margin: 15px;
+}
 
 .press__media_slide_content-item {
     margin-bottom: 16px;
     display: flex;
     flex-direction: column;
+    
 }
 
 .press__media_slider-paragr {
@@ -176,18 +178,17 @@
     font-style: italic;
     font-weight: 700;
     color: #fff;
-    text-align: justify;
+    text-align: center;
 }
 
 .press__media_slider-img {
-    width:344px;
     height: 37px;
     margin: 20px auto;
 }
 
 .press__media_divider {
     display: block;
-    margin: 0 auto;
+    margin: 10px auto;
     width: 28%;
     height: 3px;
     background-color: rgb(186, 88, 208);
@@ -200,13 +201,13 @@
 }
 
 .press__media_arrow#prev {
-    /* left: unset; */
-    right: 92%;
+    left: unset;
+    right: 96%;
 }
 
 .press__media_arrow#next {
-    /* right: unset; */
-    left: 92%;
+    right: unset;
+    left: 96%;
 }
 
 .press__media_arrow-img {
@@ -230,12 +231,13 @@
 }
 
 .press__icon {
-    max-width: 282px;
     object-fit: cover;
+    width:100%;
+    height: 100%;
 }
 
 .press__name {
-    padding-top: 10px;
+    margin: 10px 0;
     font-size: 17px;
     font-weight: 400;
     color: var(--color-link);
@@ -304,8 +306,16 @@
     .job__item-wrap {
         display: grid;
         grid-template-columns: 1.5fr 1.5fr 1fr;
+    }
 
+    .press__media_arrow#prev {
+        left: unset;
+        right: 97%;
+    }
 
+    .press__media_arrow#next {
+        right: unset;
+        left: 97%;
     }
 
     .press__items-wrap {
@@ -313,10 +323,6 @@
         grid-template-columns: 1fr 1fr;
         column-gap: 20px;
     }
-
-
-
-
 }
 
 @media (min-width: 768px) {
@@ -328,26 +334,20 @@
 
     }
 
-
     .press__items {
         min-height: 200px;
     }
-    .press__media_arrow {
-        display: block;
-        position: absolute;
-        top: 40%;
-    }
-    
+
     .press__media_arrow#prev {
-        /* left: unset; */
-        right: 96%;
+        left: unset;
+        right: 98%;
     }
-    
+
     .press__media_arrow#next {
-        /* right: unset; */
-        left: 96%;
+        right: unset;
+        left: 98%;
     }
-    
+
     .press__items-wrap {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -404,6 +404,18 @@
     .job__line {
         display: block;
         width: 100%;
+    }
+
+
+
+    .press__media_arrow#prev {
+        left: unset;
+        right: 98%;
+    }
+
+    .press__media_arrow#next {
+        right: unset;
+        left: 98%;
     }
 
     .press__items {
