--- a/css/experienced-team-job.css
+++ b/css/experienced-team-job.css
@@ -167,12 +167,13 @@
 
 .press__media_slide_content-item {
     margin-bottom: 16px;
-    min-height: 415px;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .press__media_slider-paragr {
+    margin-top: 30px;
     font-size: 21px;
     font-style: italic;
     font-weight: 700;
@@ -182,7 +183,8 @@
 
 .press__media_slider-img {
     width: 40%;
-    margin: 20px auto;
+    margin-top: 70px;
+    
 }
 
 .press__media_slider-img-times {
@@ -192,7 +194,7 @@
 
 .press__media_divider {
     display: block;
-    margin: 20px auto;
+    margin: 30px auto;
     width: 28%;
     height: 3px;
     background-color: rgb(186, 88, 208);
@@ -356,7 +358,15 @@
         right: unset;
         left: 97%;
     }
-
+    .press__media_slider-img {
+        width: 40%;
+       
+    }
+    
+    .press__media_slider-img-times {
+    
+        margin: 35px auto;
+    }
     .press__items-wrap {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -416,7 +426,15 @@
     }
 
 
-
+    .press__media_slider-img {
+        width: 40%;
+      
+    }
+    
+    .press__media_slider-img-times {
+    
+        margin: 40px auto;
+    }
     .press__media_arrow#prev {
         left: unset;
         right: 98%;
