--- a/css/experienced-team-job.css
+++ b/css/experienced-team-job.css
@@ -183,7 +183,7 @@
 .press__media_slider-img-container {
     display: flex;
     flex-direction: column;
-    margin-top: 70px;
+    margin-top: 80px;
 }
 
 .press__media_slider-img {
@@ -193,7 +193,7 @@
 
 .press__media_slider-img-times {
     width: 70%;
-    margin: 15px auto;
+    margin: 5px auto;
 }
 
 .press__media_divider {
@@ -346,10 +346,6 @@
         justify-content: space-around;
 
     }
-
-    .press__media_slider-img-container {
-        margin-top: 80px;
-    }
     .press__media_slider-img {
         width: 20%;
     }
@@ -479,5 +475,13 @@
         grid-template-columns: 1.5fr 1fr;
 
 
+    }
+   
+    .press__media_slider-img {
+        width: 15%;
+    }
+    
+    .press__media_slider-img-times {
+        width: 50%;
     }
 }
