--- a/css/why__wrapper.css
+++ b/css/why__wrapper.css
@@ -60,6 +60,11 @@
     width: 25px;
 }
 
+.block__group{
+    flex-shrink: 0;
+    display: flex;
+}
+
 .paginator__wrapper{
     display: flex;
     justify-content: space-between;
