--- a/css/advantages.css
+++ b/css/advantages.css
@@ -1,3 +1,8 @@
 .advantages {
     background: linear-gradient(0deg, #2e3e61 0%, rgb(46,62,97) 100%);
 }
+.advantages__icons {
+    max-width: 30px;
+    max-height: 30px;
+}
+
