--- a/css/advantages.css
+++ b/css/advantages.css
@@ -5,6 +5,10 @@
     max-width: 30px;
     max-height: 30px;
 }
+.advantages__rupor {
+    max-width: 30px;
+    max-height: 30px;
+}
 
 .row__one{
     padding-left: 15px;
