--- a/css/advantages.css
+++ b/css/advantages.css
@@ -9,6 +9,10 @@
     max-width: 30px;
     max-height: 30px;
 }
+.advantages__currencyexchange {
+    max-width: 30px;
+    max-height: 30px;
+}
 
 .row__one{
     padding-left: 15px;
