--- a/css/advantages.css
+++ b/css/advantages.css
@@ -17,6 +17,10 @@
     max-width: 30px;
     max-height: 30px;
 }
+.advantages__bestrait {
+    max-width: 30px;
+    max-height: 30px;
+}
 .row__one{
     padding-left: 15px;
     padding-right: 15px;
