fixed css block 4

--- a/css/advantages.css
+++ b/css/advantages.css
@@ -21,6 +21,10 @@
     max-width: 30px;
     max-height: 30px;
 }
+.advantages__bank {
+    max-width: 30px;
+    max-height: 30px;
+}
 .row__one{
     padding-left: 15px;
     padding-right: 15px;
