--- a/css/advantages.css
+++ b/css/advantages.css
@@ -5,8 +5,6 @@
 .advantages__container {
     max-width: 1200px;
     margin: auto;
-    display: flex;
-    flex-direction: column;
 }
 
 .advantages__icons {
@@ -46,6 +44,10 @@
 
 
 @media (min-width: 768px) {
+    .advantages__container{
+        display: flex;
+        flex-direction: column;
+    }
 	.row__one {
 		display: flex;
         flex-direction: row;
