--- a/css/advantages.css
+++ b/css/advantages.css
@@ -28,6 +28,7 @@
 
 .advantages__block{
     max-width: 320px;
+    margin-top: 35px;
 }
 
 .advantages__block h2{
@@ -37,7 +38,7 @@
 }
 
 .advantages__block p{
-    color: #fff;
+    color: #b4b4b4;
     margin-top: 10px;
     margin-left: 15px;
 }
