--- a/css/why__wrapper.css
+++ b/css/why__wrapper.css
@@ -2,7 +2,9 @@
     background: rgb(26,29,42);
 }
 
-
+.text__paragraph{
+    margin-bottom: 10px;
+}
 
 .why__cryptochange-block {
     display: flex;
@@ -42,6 +44,7 @@
 
 .why__header {
     color: #f8f8f8 ;
+    margin-bottom: 10px;
 }
 
 .text__container-bolt-font {
@@ -63,6 +66,7 @@
 .block__group{
     flex-shrink: 0;
     display: flex;
+    width: 50vw;
 }
 
 .paginator__wrapper{
@@ -73,7 +77,7 @@
 
 .anycash__one {
     background-color: rgb(40,47,67);
-    width: 100px;
+    width: 100%;
     height: 100px;
     display: flex;
     justify-content: center;
@@ -128,11 +132,13 @@
 
 .button__left {
     margin-left: 1%;
-    
+    position: absolute;
 }
 
 .button__right {
     margin-right: 1%;
+    position: absolute;
+    left: 95%
 }
 
 @media (max-width:768px){
@@ -141,5 +147,82 @@
     }
     .image__wrapper{
         width: 100%;
+    }
+}
+
+.slids {
+    margin: 0 10px;
+}
+
+@media (max-width: 485px){
+    .slids{
+        width: 70vw;
+    }
+    .block__group{
+        width: 100vw;
+        justify-content: center;
+    }
+    .slide-item{
+        width: 100%;
+    }
+}
+
+@media (min-width: 486px) and (max-width: 770px){
+    .slids{
+        width: 35vw;
+    }
+    .block__group{
+        width: 100vw;
+        justify-content: center;
+    }     
+    .slide-item{
+        width: 100%;
+    }
+}
+
+@media (min-width: 771px) and (max-width: 990px){
+    .slids{
+        width: 21vw;
+    }
+    .block__group{
+        width: 100vw;
+        justify-content: center;
+    }     
+    .slide-item{
+        width: 100%;
+    }
+}
+
+@media (min-width: 991px){
+    .slids{
+        width: 14vw;
+    }
+    .block__group{
+        width: 100vw;
+        justify-content: center;
+    }     
+    .slide-item{
+        width: 100%;
+    }
+}
+
+@media (max-width: 370px) {
+    .yellow__arrow{
+        justify-content: center;
+        margin: 0 30px;
+        width: 50%;
+    }
+    .links__container-arrow {
+        display: grid;
+        grid-template-columns: auto;
+    }
+
+}
+
+@media (min-width: 370px){
+    .incety__arrow{
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center; 
     }
 }
